@@ -14,6 +14,7 @@
    - Improve displayed float values for selected configuration keys (#216)
    - Unicode error when searching for data sets on disk (#218)
    - Unicode error when performing LMM analysis on some setups (#217)
+   - IndexError when obtaining meta data from previous, broken analysis
 0.8.5
  - Update plotting range when switching to log scale (#198)
  - Allow to fix plotting range to retain previous behavior (#198)
